8048556: Unnecessary GCLocker-initiated young GCs

Fixed recognition of unnecessary GCLocker collections.

Reviewed-by: pliden, tschatzl